crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__heading-implicit-id.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
## Boot sequence

See [](#boot-sequence) and [^boot-sequence].
