crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__heading-unnumbered.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
# Preface {.unnumbered}

## Colophon {.unlisted}
