crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__html-raw.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Inline <span class="x">text</span> and <br> here.

<div class="note">
Raw block.
</div>
