crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__include-snippet-dashes.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
--8<-- "chapters/boot.md"
