crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__include.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
--8<-- "chapters/boot.md"

{include base=chapters}(chapters/setup.md)
