crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__inline-emoji.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Ship it 🚀 😄 at 12:30:45.
