crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__inline-icon.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Click :material-cog: Settings.
