crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__inline-insert-off.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
Now \^\^inserted\^\^ text.
