crates/tmark-fmt/tests/snapshots/mkdocs__mkdocs__inline-insert.snap
---
source: crates/tmark-fmt/tests/mkdocs.rs
expression: mkdocs(&canonical)
---
---
press:
  features:
    inline.insert: true
---

Now {underline}[inserted] text.
